--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ console.log(types[i]);
       this.dataset[types[i].id] = types[i].id;
       this.drilldowns[types[i].id] = types[i].drilldowns;
       this.breakdown[types[i].id] = types[i].breakdown;
-      this.styles[types[i].id] = types[i].cofog;
+      this.styles[types[i].id] = types[i].styles;
     }
   }
 };
