--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ title: 使途一日あたり
 var Setting = {
   apiUrl: 'http://openspending.org/api',
   rootNodeLabel: 'Total',
-  dataset: [],
-  drilldowns: [],
-  breakdown: [],
-  styles: [],
+  dataset: {},
+  drilldowns: {},
+  breakdown: {},
+  styles: {},
 
   init: function(json) {
     var types = json.categorytypes;
