--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ console.log(types[i]);
 function updatePage(db, categoryType, fiscalYear) {
 
 console.log("Setting:");
-console.log(this.apiUrl);
-console.log(this.dataset);
-console.log(this.drilldowns);
-console.log(this.breakdown);
-console.log(this.styles);
+console.log(Setting.apiUrl);
+console.log(Setting.dataset);
+console.log(Setting.drilldowns);
+console.log(Setting.breakdown);
+console.log(Setting.styles);
   new OpenSpending.Aggregator({
     apiUrl: Setting.apiUrl,
     //localApiCache: 'aggregate.json',
