--- a/index.html
+++ b/index.html
@@ -16,24 +16,33 @@ var Setting = {
   init: function(json) {
     var types = json.categorytypes;
     for (var i = 0; i < types.length; i++) {
-console.log(types[i]);
-
       this.dataset[types[i].id] = types[i].id;
       this.drilldowns[types[i].id] = types[i].drilldowns;
       this.breakdown[types[i].id] = types[i].breakdown;
       this.styles[types[i].id] = types[i].styles;
     }
+
+    // for debug
+    // console.log("Setting.init Done.");
+    // console.log(this.apiUrl);
+    // console.log(this.dataset);
+    // console.log(this.drilldowns);
+    // console.log(this.breakdown);
+    // console.log(this.styles);
   }
 };
 
 function updatePage(db, categoryType, fiscalYear) {
 
-console.log("Setting:");
-console.log(Setting.apiUrl);
-console.log(Setting.dataset);
-console.log(Setting.drilldowns);
-console.log(Setting.breakdown);
-console.log(Setting.styles);
+    // for debug
+    console.log("Call updatePage.");
+    console.log(Setting.apiUrl);
+    console.log(Setting.dataset[categoryType]);
+    console.log(Setting.drilldowns[categoryType]);
+    console.log(fiscalYear);
+    console.log(Setting.breakdown[categoryType]);
+    console.log(Setting.styles[categoryType]);
+
   new OpenSpending.Aggregator({
     apiUrl: Setting.apiUrl,
     //localApiCache: 'aggregate.json',
