--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ console.log(categoryTypes);
         $('#preloader .txt').html('loading data');
 
         var db = new OpenSpending.DailyBread($('#dailybread'));
-        updatePage(db, $("#category-type").value, $("#fiscal-year").value);
+        updatePage(db, $("#category-type option:selected").value, $("#fiscal-year option:selected").value);
       });
     })(jQuery)
   }
