--- a/index.html
+++ b/index.html
@@ -98,15 +98,14 @@ yepnope({
 
         // 設定ロード
         var categoryTypes = JSON.parse($("#json-categorytypes").text());
-console.log(categoryTypes);
         Setting.init(categoryTypes);
 
         // ページロード
         $('#preloader .txt').html('loading data');
 
         var db = new OpenSpending.DailyBread($('#dailybread'));
-
         updatePage(db, $("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+        OpenSpending.renderDependentTypes(db);
       });
     })(jQuery)
   }
