--- a/bubbletree.html
+++ b/bubbletree.html
@@ -7,21 +7,44 @@ title: 使途別予算額
   <script type="text/javascript">
 
   function updatePage(db, categoryType, fiscalYear) {
-    DataManager.setConfig(categoryType, fiscalYear, function (data) {
-      db.children('#content-wrap').show();
-      db.children('#preloader').remove();
 
-      db.setDataFromAggregator(data, ['unknown']);
-      db.setIconLookup(function(name) {
-        var style = this.configs[categoryType].Styles.Cofog[name];
-        if (style != undefined) {
-          return style['icon'];
-        }
-        return 'icons/unknown.svg';
-      });
-      db.draw();
+    // - for debug -
+    //console.log("Call updatePage.");
+    //console.log(Setting.apiUrl);
+    //console.log(Setting.dataset[categoryType]);
+    //console.log(Setting.drilldowns[categoryType]);
+    //console.log(fiscalYear);
+    //console.log(Setting.breakdown[categoryType]);
+    //console.log(Setting.styles[categoryType]);
+
+    new OpenSpending.Aggregator({
+      apiUrl: Setting.apiUrl,
+      //localApiCache: 'aggregate.json',
+      dataset: Setting.dataset[categoryType],
+      drilldowns: Setting.drilldowns[categoryType],
+      cuts: ['year:' + fiscalYear],
+      rootNodeLabel: Setting.rootNodeLabel,
+      breakdown: Setting.breakdown[categoryType],
+      callback: function(data) {
+        window.bubbleTree = new BubbleTree({
+          data: data,
+          container: '#bubbletree',
+          bubbleType: 'icon',
+          bubbleStyles: {
+              'cofog':  OpenSpending.Styles.Cofog,
+          },
+          clearColors: true, // remove all colors coming from OpenSpending API
+          rootPath: '/',
+            tooltip: {
+              qtip: true,
+              delay: 800,
+              content: function(node) {
+                return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
+              }
+            }
+        });
+      }
     });
-    OpenSpending.renderDependentTypes(db);
   }
 
   yepnope.errorTimeout = 1000;
@@ -43,51 +66,23 @@ title: 使途別予算額
 
     $(function() {
 
-        // イベント：会計年度
-        $("#fiscal-year").change(function(){
-          updatePage(db, $("#category-type").value, this.value);
-        });
-        // イベント：分類タイプ
-        $("#category-type").change(function(){
-          updatePage(db, this.value, $("#fiscal-year").value);
-        });
+      // イベント：会計年度
+      $("#fiscal-year").change(function(){
+        updatePage(db, $("#category-type").value, this.val());
+      });
+      // イベント：分類タイプ
+      $("#category-type").change(function(){
+        updatePage(db, this.value, $("#fiscal-year").val());
+      });
 
       var $tooltip = $('<div class="tooltip">Tooltip</div>');
       $('.bubbletree').append($tooltip);
       $tooltip.hide();
 
-      var dataLoaded = function(data) {
-        window.bubbleTree = new BubbleTree({
-          data: data,
-          container: '#bubbletree',
-          bubbleType: 'icon',
-          bubbleStyles: {
-              'cofog':  OpenSpending.Styles.Cofog,
-          },
-          clearColors: true, // remove all colors coming from OpenSpending API
-          rootPath: '/',
-            tooltip: {
-              qtip: true,
-              delay: 800,
-              content: function(node) {
-                return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
-              }
-            }
-        });
-      };
+      var dataLoaded =
 
       // call openspending api for data
-      new OpenSpending.Aggregator({
-        apiUrl: 'http://openspending.org/api',
-        //Use static file instead of api
-        //localApiCache: 'aggregate.json',
-        dataset: OpenSpending.identifier,
-        rootNodeLabel: 'Total',
-        drilldowns: ['Category', 'Subcategory'],
-        cuts: ['year:' + OpenSpending.year],
-        breakdown: 'Subcategory',
-        callback: dataLoaded
-      });
+      updatePage(db, $("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
     });
   }
   });
