--- a/bubbletree.html
+++ b/bubbletree.html
@@ -31,7 +31,7 @@ title: 使途別予算額
           container: '#bubbletree',
           bubbleType: 'icon',
           bubbleStyles: {
-              'cofog':  OpenSpending.Styles.Cofog,
+              'cofog':  Setting.styles[categoryType],
           },
           clearColors: true, // remove all colors coming from OpenSpending API
           rootPath: '/',
@@ -60,7 +60,7 @@ title: 使途別予算額
     '/css/bubbletree.css',
     '/css/cra-map.css',
     '/js/aggregator.js',
-    '/js/setting.js?20150506'
+    '/js/setting.js?20150518'
   ],
   complete: function() {
 
