--- a/bubbletree.html
+++ b/bubbletree.html
@@ -9,13 +9,13 @@ title: 使途別予算額
   function updatePage(categoryType, fiscalYear) {
 
     // - for debug -
-    //console.log("Call updatePage.");
-    //console.log(Setting.apiUrl);
-    //console.log(Setting.dataset[categoryType]);
-    //console.log(Setting.drilldowns[categoryType]);
-    //console.log(fiscalYear);
-    //console.log(Setting.breakdown[categoryType]);
-    //console.log(Setting.styles[categoryType]);
+    console.log("Call updatePage.");
+    console.log(Setting.apiUrl);
+    console.log(Setting.dataset[categoryType]);
+    console.log(Setting.drilldowns[categoryType]);
+    console.log(fiscalYear);
+    console.log(Setting.breakdown[categoryType]);
+    console.log(Setting.styles[categoryType]);
 
     new OpenSpending.Aggregator({
       apiUrl: Setting.apiUrl,
