--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@ title: 使途一日あたり
 function updatePage(db, categoryType, fiscalYear) {
 
   // - for debug -
-  //console.log("Call updatePage.");
-  //console.log(Setting.apiUrl);
-  //console.log(Setting.dataset[categoryType]);
-  //console.log(Setting.drilldowns[categoryType]);
-  //console.log(fiscalYear);
-  //console.log(Setting.breakdown[categoryType]);
-  //console.log(Setting.styles[categoryType]);
+  /*
+  console.log("Call updatePage.");
+  console.log(Setting.apiUrl);
+  console.log(Setting.dataset[categoryType]);
+  console.log(Setting.drilldowns[categoryType]);
+  console.log(fiscalYear);
+  console.log(Setting.breakdown[categoryType]);
+  console.log(Setting.styles[categoryType]);
+  */
 
   new OpenSpending.Aggregator({
     apiUrl: Setting.apiUrl,
