--- a/bubbletree.html
+++ b/bubbletree.html
@@ -6,7 +6,7 @@ title: 使途別予算額
 <div class="row">
   <script type="text/javascript">
 
-  function updatePage(categoryType, fiscalYear) {
+  function updatePage(dataLoaded, categoryType, fiscalYear) {
 
     // - for debug -
     console.log("Call updatePage.");
@@ -24,25 +24,7 @@ title: 使途別予算額
       cuts: ['year:' + fiscalYear],
       rootNodeLabel: Setting.rootNodeLabel,
       breakdown: Setting.breakdown[categoryType],
-      callback: function(data) {
-        window.bubbleTree = new BubbleTree({
-          data: data,
-          container: '#bubbletree',
-          bubbleType: 'icon',
-          bubbleStyles: {
-              'cofog':  Setting.styles[categoryType],
-          },
-          clearColors: true, // remove all colors coming from OpenSpending API
-          rootPath: '/',
-            tooltip: {
-              qtip: true,
-              delay: 800,
-              content: function(node) {
-                return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
-              }
-            }
-        });
-      }
+      callback: dataLoaded
     });
   }
 
@@ -69,22 +51,42 @@ title: 使途別予算額
       $('.bubbletree').append($tooltip);
       $tooltip.hide();
 
-      // イベント：会計年度
-      $("#fiscal-year").change(function(){
-        updatePage($("#category-type").val(), this.value);
-      });
-      // イベント：分類タイプ
-      $("#category-type").change(function(){
-        updatePage(this.value, $("#fiscal-year").val());
-      });
-
-      // 設定ロード
-      var categoryTypes = JSON.parse($("#json-categorytypes").text());
-      Setting.init(categoryTypes);
-
-      // call openspending api for data
-      updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+      var dataLoded = function(data) {
+        window.bubbleTree = new BubbleTree({
+          data: data,
+          container: '#bubbletree',
+          bubbleType: 'icon',
+          bubbleStyles: {
+              'cofog':  Setting.styles[categoryType],
+          },
+          clearColors: true, // remove all colors coming from OpenSpending API
+          rootPath: '/',
+            tooltip: {
+              qtip: true,
+              delay: 800,
+              content: function(node) {
+                return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
+              }
+            }
+        });
+      }
     });
+
+    // イベント：会計年度
+    $("#fiscal-year").change(function(){
+      updatePage($("#category-type").val(), this.value);
+    });
+    // イベント：分類タイプ
+    $("#category-type").change(function(){
+      updatePage(this.value, $("#fiscal-year").val());
+    });
+
+    // 設定ロード
+    var categoryTypes = JSON.parse($("#json-categorytypes").text());
+    Setting.init(categoryTypes);
+
+    // call openspending api for data
+    updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
   }
   });
 
