--- a/bubbletree.html
+++ b/bubbletree.html
@@ -3,98 +3,97 @@ layout: default
 title: 使途別予算額
 ---
 
-<div class="row">
-  <script type="text/javascript">
+<script type="text/javascript">
 
-  function updatePage(dataLoaded, categoryType, fiscalYear) {
+function updatePage(dataLoaded, categoryType, fiscalYear) {
 
-    // - for debug -
-    console.log("Call updatePage.");
-    console.log(Setting.apiUrl);
-    console.log(Setting.dataset[categoryType]);
-    console.log(Setting.drilldowns[categoryType]);
-    console.log(fiscalYear);
-    console.log(Setting.breakdown[categoryType]);
-    console.log(Setting.styles[categoryType]);
+  // - for debug -
+  console.log("Call updatePage.");
+  console.log(Setting.apiUrl);
+  console.log(Setting.dataset[categoryType]);
+  console.log(Setting.drilldowns[categoryType]);
+  console.log(fiscalYear);
+  console.log(Setting.breakdown[categoryType]);
+  console.log(Setting.styles[categoryType]);
 
-    new OpenSpending.Aggregator({
-      apiUrl: Setting.apiUrl,
-      dataset: Setting.dataset[categoryType],
-      drilldowns: Setting.drilldowns[categoryType],
-      cuts: ['year:' + fiscalYear],
-      rootNodeLabel: Setting.rootNodeLabel,
-      breakdown: Setting.breakdown[categoryType],
-      callback: dataLoaded
-    });
-  }
+  new OpenSpending.Aggregator({
+    apiUrl: Setting.apiUrl,
+    dataset: Setting.dataset[categoryType],
+    drilldowns: Setting.drilldowns[categoryType],
+    cuts: ['year:' + fiscalYear],
+    rootNodeLabel: Setting.rootNodeLabel,
+    breakdown: Setting.breakdown[categoryType],
+    callback: dataLoaded
+  });
+}
 
-  yepnope.errorTimeout = 1000;
-  yepnope({
-  load: [
-    '/js/libs/jquery.qtip.min.js',
-    '/js/libs/jquery.history.js',
-    '/js/libs/raphael-min.js',
-    '/js/libs/vis4.js',
-    '/js/libs/base64.js',
-    '/js/libs/Tween.js',
-    '/js/bubbletree.js',
-    '/css/bubbletree.css',
-    '/css/cra-map.css',
-    '/js/aggregator.js',
-    '/js/setting.js?20150518'
-  ],
-  complete: function() {
+yepnope.errorTimeout = 1000;
+yepnope({
+load: [
+  '/js/libs/jquery.qtip.min.js',
+  '/js/libs/jquery.history.js',
+  '/js/libs/raphael-min.js',
+  '/js/libs/vis4.js',
+  '/js/libs/base64.js',
+  '/js/libs/Tween.js',
+  '/js/bubbletree.js',
+  '/css/bubbletree.css',
+  '/css/cra-map.css',
+  '/js/aggregator.js',
+  '/js/setting.js?20150518'
+],
+complete: function() {
 
-    $(function() {
+  $(function() {
 
-      var $tooltip = $('<div class="tooltip">Tooltip</div>');
-      $('.bubbletree').append($tooltip);
-      $tooltip.hide();
+    var $tooltip = $('<div class="tooltip">Tooltip</div>');
+    $('.bubbletree').append($tooltip);
+    $tooltip.hide();
 
-      var dataLoded = function(data) {
-        window.bubbleTree = new BubbleTree({
-          data: data,
-          container: '#bubbletree',
-          bubbleType: 'icon',
-          bubbleStyles: {
-              'cofog':  Setting.styles[categoryType],
-          },
-          clearColors: true, // remove all colors coming from OpenSpending API
-          rootPath: '/',
-            tooltip: {
-              qtip: true,
-              delay: 800,
-              content: function(node) {
-                return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
-              }
+    var dataLoded = function(data) {
+      window.bubbleTree = new BubbleTree({
+        data: data,
+        container: '#bubbletree',
+        bubbleType: 'icon',
+        bubbleStyles: {
+            'cofog':  Setting.styles[categoryType],
+        },
+        clearColors: true, // remove all colors coming from OpenSpending API
+        rootPath: '/',
+          tooltip: {
+            qtip: true,
+            delay: 800,
+            content: function(node) {
+              return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
             }
-        });
-      }
-    });
-
-    // イベント：会計年度
-    $("#fiscal-year").change(function(){
-      updatePage($("#category-type").val(), this.value);
-    });
-    // イベント：分類タイプ
-    $("#category-type").change(function(){
-      updatePage(this.value, $("#fiscal-year").val());
-    });
-
-    // 設定ロード
-    var categoryTypes = JSON.parse($("#json-categorytypes").text());
-    Setting.init(categoryTypes);
-
-    // call openspending api for data
-    updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
-  }
+          }
+      });
+    }
   });
 
-  </script>
+  // イベント：会計年度
+  $("#fiscal-year").change(function(){
+    updatePage($("#category-type").val(), this.value);
+  });
+  // イベント：分類タイプ
+  $("#category-type").change(function(){
+    updatePage(this.value, $("#fiscal-year").val());
+  });
 
+  // 設定ロード
+  var categoryTypes = JSON.parse($("#json-categorytypes").text());
+  Setting.init(categoryTypes);
+
+  // call openspending api for data
+  updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+}
+});
+
+</script>
+<div class="row">
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
-    <select id="kwsk_fiscal-year">
+    <select id="fiscal-year">
     {% for fiscalyear in site.data.fiscalyears %}
       <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
     {% endfor %}
@@ -102,7 +101,7 @@ title: 使途別予算額
   </div>
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
-    <select id="kwsk_category-type">
+    <select id="category-type">
     {% for categorytype in site.data.categorytypes %}
       <option value="{{ categorytype.id }}" {{ categorytype.selected }}>{{ categorytype.text }}</option>
     {% endfor %}
