--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: 使途一日あたり
 ---
 
-<script>
+<script type="text/javascript">
 
 function updatePage(db, categoryType, fiscalYear) {
 
