--- a/bubbletree.html
+++ b/bubbletree.html
@@ -29,64 +29,67 @@ function updatePage(dataLoaded, categoryType, fiscalYear) {
 
 yepnope.errorTimeout = 1000;
 yepnope({
-load: [
-  '/js/libs/jquery.qtip.min.js',
-  '/js/libs/jquery.history.js',
-  '/js/libs/raphael-min.js',
-  '/js/libs/vis4.js',
-  '/js/libs/base64.js',
-  '/js/libs/Tween.js',
-  '/js/bubbletree.js',
-  '/css/bubbletree.css',
-  '/css/cra-map.css',
-  '/js/aggregator.js',
-  '/js/setting.js?20150518'
-],
-complete: function() {
+  load: [
+    '/js/libs/jquery.qtip.min.js',
+    '/js/libs/jquery.history.js',
+    '/js/libs/raphael-min.js',
+    '/js/libs/vis4.js',
+    '/js/libs/base64.js',
+    '/js/libs/Tween.js',
+    '/js/bubbletree.js',
+    '/css/bubbletree.css',
+    '/css/cra-map.css',
+    '/js/aggregator.js',
+    '/js/setting.js?20150518'
+  ],
+  complete: function() {
 
-  $(function() {
+    (function ($) {
 
-    var $tooltip = $('<div class="tooltip">Tooltip</div>');
-    $('.bubbletree').append($tooltip);
-    $tooltip.hide();
+      $(function() {
 
-    var dataLoded = function(data) {
-      window.bubbleTree = new BubbleTree({
-        data: data,
-        container: '#bubbletree',
-        bubbleType: 'icon',
-        bubbleStyles: {
-            'cofog':  Setting.styles[categoryType],
-        },
-        clearColors: true, // remove all colors coming from OpenSpending API
-        rootPath: '/',
-          tooltip: {
-            qtip: true,
-            delay: 800,
-            content: function(node) {
-              return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
-            }
-          }
+        var $tooltip = $('<div class="tooltip">Tooltip</div>');
+        $('.bubbletree').append($tooltip);
+        $tooltip.hide();
+
+        var dataLoded = function(data) {
+          window.bubbleTree = new BubbleTree({
+            data: data,
+            container: '#bubbletree',
+            bubbleType: 'icon',
+            bubbleStyles: {
+              'cofog':  Setting.styles[categoryType],
+            },
+            clearColors: true, // remove all colors coming from OpenSpending API
+            rootPath: '/',
+              tooltip: {
+                qtip: true,
+                delay: 800,
+                content: function(node) {
+                  return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
+                }
+              }
+          });
+        }
       });
+
+      // イベント：会計年度
+      $("#fiscal-year").change(function(){
+        updatePage($("#category-type").val(), this.value);
+      });
+      // イベント：分類タイプ
+      $("#category-type").change(function(){
+        updatePage(this.value, $("#fiscal-year").val());
+      });
+
+      // 設定ロード
+      var categoryTypes = JSON.parse($("#json-categorytypes").text());
+      Setting.init(categoryTypes);
+
+      // call openspending api for data
+      updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
     }
-  });
-
-  // イベント：会計年度
-  $("#fiscal-year").change(function(){
-    updatePage($("#category-type").val(), this.value);
-  });
-  // イベント：分類タイプ
-  $("#category-type").change(function(){
-    updatePage(this.value, $("#fiscal-year").val());
-  });
-
-  // 設定ロード
-  var categoryTypes = JSON.parse($("#json-categorytypes").text());
-  Setting.init(categoryTypes);
-
-  // call openspending api for data
-  updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
-}
+  }
 });
 
 </script>
