--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ yepnope({
       <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
     {% endfor %}
     </select>
+    <a href="/legend.html" target="_blank" style="text-align:right;">アイコンの説明</a>
   </div>
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
