--- a/index.html
+++ b/index.html
@@ -92,23 +92,25 @@ yepnope({
   <h2 class="page-header">The Daily Bread <small> Costs for the British Taxpayer per Day</small></h2>
   -->
   <div>
-    <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
-    <select id="fiscal-year">
-    {% for fiscalyear in site.data.fiscalyears %}
-      <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
-    {% endfor %}
-    </select>
-    <span align="right">
+    <div>
+      <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
+      <select id="fiscal-year">
+      {% for fiscalyear in site.data.fiscalyears %}
+        <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
+      {% endfor %}
+      </select>
+    </div>
+    <div style="display:inline-block;text-align:right;">
       <a href="legend.html" onClick="window.open('legend.html','アイコンの説明','width=640,height=480') ; return false ;">アイコンの説明</a>
-    </span>
-  </div>
-  <div>
-    <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
-    <select id="category-type">
-    {% for categorytype in site.data.categorytypes %}
-      <option value="{{ categorytype.id }}" {{ categorytype.selected }}>{{ categorytype.text }}</option>
-    {% endfor %}
-    </select>
+    </div>
+    <div>
+      <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
+      <select id="category-type">
+      {% for categorytype in site.data.categorytypes %}
+        <option value="{{ categorytype.id }}" {{ categorytype.selected }}>{{ categorytype.text }}</option>
+      {% endfor %}
+      </select>
+    </div>
   </div>
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">あなたの世帯タイプは？</h2>
