--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ yepnope({
   <h2 class="page-header">The Daily Bread <small> Costs for the British Taxpayer per Day</small></h2>
   -->
   <div>
-    <div>
+    <div style="display:inline-block;text-align:left;">
       <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい年度は？</h2>
       <select id="fiscal-year">
       {% for fiscalyear in site.data.fiscalyears %}
