--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ yepnope({
       {% endfor %}
       </select>
     </div>
-    <div style="display:inline-block;text-align:right;width:auto;font-size:12px;">
+    <div style="width:300px;display:inline-block;text-align:right;width:auto;font-size:14px;">
       <a href="legend.html" onClick="window.open('legend.html','アイコンの説明','width=640,height=480') ; return false ;">アイコンの説明</a>
     </div>
     <div>
