--- a/bubbletree.html
+++ b/bubbletree.html
@@ -44,43 +44,39 @@ yepnope({
   ],
   complete: function() {
 
-    (function ($) {
+    $(function() {
+      var $tooltip = $('<div class="tooltip">Tooltip</div>');
+      $('.bubbletree').append($tooltip);
+      $tooltip.hide();
 
-      $(function() {
-console.log("tooltip");
-        var $tooltip = $('<div class="tooltip">Tooltip</div>');
-        $('.bubbletree').append($tooltip);
-        $tooltip.hide();
-
-        var dataLoded = function(data) {
-          window.bubbleTree = new BubbleTree({
-            data: data,
-            container: '#bubbletree',
-            bubbleType: 'icon',
-            bubbleStyles: {
-              'cofog':  Setting.styles[categoryType],
-            },
-            clearColors: true, // remove all colors coming from OpenSpending API
-            rootPath: '/',
-              tooltip: {
-                qtip: true,
-                delay: 800,
-                content: function(node) {
-                  return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
-                }
+      var dataLoded = function(data) {
+        window.bubbleTree = new BubbleTree({
+          data: data,
+          container: '#bubbletree',
+          bubbleType: 'icon',
+          bubbleStyles: {
+            'cofog':  Setting.styles[categoryType],
+          },
+          clearColors: true, // remove all colors coming from OpenSpending API
+          rootPath: '/',
+            tooltip: {
+              qtip: true,
+              delay: 800,
+              content: function(node) {
+                return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
               }
-          });
-        }
-      });
+            }
+        });
+      };
 
 console.log("event");
       // イベント：会計年度
       $("#fiscal-year").change(function(){
-        updatePage($("#category-type").val(), this.value);
+        updatePage(dataLoded, $("#category-type").val(), this.value);
       });
       // イベント：分類タイプ
       $("#category-type").change(function(){
-        updatePage(this.value, $("#fiscal-year").val());
+        updatePage(dataLoded, this.value, $("#fiscal-year").val());
       });
 
       // 設定ロード
@@ -88,7 +84,8 @@ console.log("event");
       Setting.init(categoryTypes);
 
       // call openspending api for data
-      updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+      updatePage(dataLoded, $("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+
     });
   }
 });
@@ -101,6 +98,9 @@ console.log("event");
       <option value="{{ fiscalyear.ad }}" {{ fiscalyear.selected }}>{{ fiscalyear.jc }}</option>
     {% endfor %}
     </select>
+    <div style="width:450px;display:inline-block;font-size:14px;text-align:right;vertical-align:top;">
+      <a href="legend.html" onClick="window.open('legend.html','アイコンの説明','width=640,height=480') ; return false ;">アイコンの説明</a>
+    </div>
   </div>
   <div>
     <h2 style="width:240px;display:inline-block;vertical-align:top;">見たい分類は？</h2>
