--- a/bubbletree.html
+++ b/bubbletree.html
@@ -5,7 +5,7 @@ title: 使途別予算額
 
 <script type="text/javascript">
 
-function updatePage(dataLoaded, categoryType, fiscalYear) {
+function updatePage(categoryType, fiscalYear) {
 
   // - for debug -
   console.log("Call updatePage.");
@@ -15,6 +15,26 @@ function updatePage(dataLoaded, categoryType, fiscalYear) {
   console.log(fiscalYear);
   console.log(Setting.breakdown[categoryType]);
   console.log(Setting.styles[categoryType]);
+
+  var dataLoded = function(data) {
+  window.bubbleTree = new BubbleTree({
+    data: data,
+    container: '#bubbletree',
+    bubbleType: 'icon',
+    bubbleStyles: {
+      'cofog':  Setting.styles[categoryType],
+    },
+    clearColors: true, // remove all colors coming from OpenSpending API
+    rootPath: '/',
+      tooltip: {
+        qtip: true,
+        delay: 800,
+        content: function(node) {
+          return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
+        }
+      }
+    });
+  };
 
   new OpenSpending.Aggregator({
     apiUrl: Setting.apiUrl,
@@ -49,34 +69,14 @@ yepnope({
       $('.bubbletree').append($tooltip);
       $tooltip.hide();
 
-      var dataLoded = function(data) {
-        window.bubbleTree = new BubbleTree({
-          data: data,
-          container: '#bubbletree',
-          bubbleType: 'icon',
-          bubbleStyles: {
-            'cofog':  Setting.styles[categoryType],
-          },
-          clearColors: true, // remove all colors coming from OpenSpending API
-          rootPath: '/',
-            tooltip: {
-              qtip: true,
-              delay: 800,
-              content: function(node) {
-                return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
-              }
-            }
-        });
-      };
-
 console.log("event");
       // イベント：会計年度
       $("#fiscal-year").change(function(){
-        updatePage(dataLoded, $("#category-type").val(), this.value);
+        updatePage($("#category-type").val(), this.value);
       });
       // イベント：分類タイプ
       $("#category-type").change(function(){
-        updatePage(dataLoded, this.value, $("#fiscal-year").val());
+        updatePage(this.value, $("#fiscal-year").val());
       });
 
       // 設定ロード
@@ -84,7 +84,7 @@ console.log("event");
       Setting.init(categoryTypes);
 
       // call openspending api for data
-      updatePage(dataLoded, $("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+      updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
 
     });
   }
