--- a/bubbletree.html
+++ b/bubbletree.html
@@ -16,7 +16,7 @@ function updatePage(categoryType, fiscalYear) {
   console.log(Setting.breakdown[categoryType]);
   console.log(Setting.styles[categoryType]);
 
-  var dataLoded = function(data) {
+  var dataLoaded = function(data) {
   window.bubbleTree = new BubbleTree({
     data: data,
     container: '#bubbletree',
