--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ title: 使途一日あたり
 function updatePage(db, categoryType, fiscalYear) {
 
   // - for debug -
-  /*
-  console.log("Call updatePage.");
+  /* console.log("Call updatePage.");
   console.log(Setting.apiUrl);
   console.log(Setting.dataset[categoryType]);
   console.log(Setting.drilldowns[categoryType]);
