--- a/bubbletree.html
+++ b/bubbletree.html
@@ -8,33 +8,14 @@ title: 使途別予算額
 function updatePage(categoryType, fiscalYear) {
 
   // - for debug -
-  console.log("Call updatePage.");
+  /* console.log("Call updatePage.");
   console.log(Setting.apiUrl);
   console.log(Setting.dataset[categoryType]);
   console.log(Setting.drilldowns[categoryType]);
   console.log(fiscalYear);
   console.log(Setting.breakdown[categoryType]);
   console.log(Setting.styles[categoryType]);
-
-  var dataLoaded = function(data) {
-  window.bubbleTree = new BubbleTree({
-    data: data,
-    container: '#bubbletree',
-    bubbleType: 'icon',
-    bubbleStyles: {
-      'cofog':  Setting.styles[categoryType],
-    },
-    clearColors: true, // remove all colors coming from OpenSpending API
-    rootPath: '/',
-      tooltip: {
-        qtip: true,
-        delay: 800,
-        content: function(node) {
-          return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
-        }
-      }
-    });
-  };
+  */
 
   new OpenSpending.Aggregator({
     apiUrl: Setting.apiUrl,
@@ -43,7 +24,25 @@ function updatePage(categoryType, fiscalYear) {
     cuts: ['year:' + fiscalYear],
     rootNodeLabel: Setting.rootNodeLabel,
     breakdown: Setting.breakdown[categoryType],
-    callback: dataLoaded
+    callback: function(data) {
+      window.bubbleTree = new BubbleTree({
+        data: data,
+        container: '#bubbletree',
+        bubbleType: 'icon',
+        bubbleStyles: {
+          'cofog':  Setting.styles[categoryType],
+        },
+        clearColors: true, // remove all colors coming from OpenSpending API
+        rootPath: '/',
+        tooltip: {
+          qtip: true,
+          delay: 800,
+          content: function(node) {
+            return [node.label, '<div class="desc">'+(node.description ? node.description : 'No description given')+'</div><div class="amount">\u00A5 '+node.famount+'</div>'];
+          }
+        }
+      });
+    }
   });
 }
 
