--- a/sources.html
+++ b/sources.html
@@ -25,8 +25,8 @@ layout: default
   <div class="span8 offset2">
   データの分類としては以下の2つを使用しています。
   <ul>
-    <li>対象となる年度の『平成x年度予算案について』の「資料」における「9 市民1人当たりの予算の使いみち」の区分</li>
-    <li>対象となる年度の『平成x年度予算案について』の「参考」における「8 予算編成の過程」において用いられている款・項の項目</li>
+    <li>対象となる年度の『平成x年度予算案について』の「資料」における「市民1人当たりの予算の使いみち」の区分</li>
+    <li>対象となる年度の『平成x年度予算案について』の「参考」における「予算編成の過程」において用いられている款・項の項目</li>
   </div>
 </div>
 <h2 class="page-header">いつの時点のデータを使っているのか？ </h2>
