--- a/bubbletree.html
+++ b/bubbletree.html
@@ -71,10 +71,12 @@ yepnope({
 console.log("event");
       // イベント：会計年度
       $("#fiscal-year").change(function(){
+        $("#bubbletree").empty();
         updatePage($("#category-type").val(), this.value);
       });
       // イベント：分類タイプ
       $("#category-type").change(function(){
+        $("#bubbletree").empty();
         updatePage(this.value, $("#fiscal-year").val());
       });
 
