--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ yepnope({
 
       // イベント：会計年度
       $("#fiscal-year").change(function(){
+        $('#dailybread').empty();
         updatePage(db, $("#category-type").val(), this.value);
       });
       // イベント：分類タイプ
       $("#category-type").change(function(){
+        $('#dailybread').empty();
         updatePage(db, this.value, $("#fiscal-year").val());
       });
 
