--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: 使途一日あたり
 
 <script type="text/javascript">
 
-function updatePage(db, categoryType, fiscalYear) {
+function updatePage(categoryType, fiscalYear) {
 
   // - for debug -
   /* console.log("Call updatePage.");
@@ -16,6 +16,8 @@ function updatePage(db, categoryType, fiscalYear) {
   console.log(Setting.breakdown[categoryType]);
   console.log(Setting.styles[categoryType]);
   */
+
+  var db = new OpenSpending.DailyBread($('#dailybread'));
 
   new OpenSpending.Aggregator({
     apiUrl: Setting.apiUrl,
@@ -61,12 +63,12 @@ yepnope({
       // イベント：会計年度
       $("#fiscal-year").change(function(){
         $('#dailybread').empty();
-        updatePage(db, $("#category-type").val(), this.value);
+        updatePage($("#category-type").val(), this.value);
       });
       // イベント：分類タイプ
       $("#category-type").change(function(){
         $('#dailybread').empty();
-        updatePage(db, this.value, $("#fiscal-year").val());
+        updatePage(this.value, $("#fiscal-year").val());
       });
 
       // 設定ロード
@@ -76,8 +78,7 @@ yepnope({
       // ページロード
       $('#preloader .txt').html('loading data');
 
-      var db = new OpenSpending.DailyBread($('#dailybread'));
-      updatePage(db, $("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+      updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
       OpenSpending.renderDependentTypes(db);
     });
   }
