--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: 使途一日あたり
 
 <script type="text/javascript">
 
-function updatePage(categoryType, fiscalYear) {
+function updatePage(db, categoryType, fiscalYear) {
 
   // - for debug -
   /* console.log("Call updatePage.");
@@ -16,8 +16,8 @@ function updatePage(categoryType, fiscalYear) {
   console.log(Setting.breakdown[categoryType]);
   console.log(Setting.styles[categoryType]);
   */
-
-  var db = new OpenSpending.DailyBread($('#dailybread'));
+  $('#dailybread').empty();
+  db.init();
 
   new OpenSpending.Aggregator({
     apiUrl: Setting.apiUrl,
@@ -62,13 +62,11 @@ yepnope({
 
       // イベント：会計年度
       $("#fiscal-year").change(function(){
-        $('#dailybread').empty();
-        updatePage($("#category-type").val(), this.value);
+        updatePage(db, $("#category-type").val(), this.value);
       });
       // イベント：分類タイプ
       $("#category-type").change(function(){
-        $('#dailybread').empty();
-        updatePage(this.value, $("#fiscal-year").val());
+        updatePage(db, this.value, $("#fiscal-year").val());
       });
 
       // 設定ロード
@@ -78,7 +76,8 @@ yepnope({
       // ページロード
       $('#preloader .txt').html('loading data');
 
-      updatePage($("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
+      var db = new OpenSpending.DailyBread($('#dailybread'));
+      updatePage(db, $("#category-type option:selected").val(), $("#fiscal-year option:selected").val());
       OpenSpending.renderDependentTypes(db);
     });
   }
