--- a/bubbletree.html
+++ b/bubbletree.html
@@ -8,7 +8,8 @@ title: 使途別予算額
 function updatePage(categoryType, fiscalYear) {
 
   // - for debug -
-  /* console.log("Call updatePage.");
+  /*
+  console.log("Call updatePage.");
   console.log(Setting.apiUrl);
   console.log(Setting.dataset[categoryType]);
   console.log(Setting.drilldowns[categoryType]);
@@ -68,7 +69,6 @@ yepnope({
       $('.bubbletree').append($tooltip);
       $tooltip.hide();
 
-console.log("event");
       // イベント：会計年度
       $("#fiscal-year").change(function(){
         $("#bubbletree").empty();
