Revert "[TEST] 2016年を追加。新アプリケーションで作成。"
This reverts commit 000dce0675aec2a7df8954009a48f910fa8dc9e7.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ function updatePage(db, categoryType, fiscalYear) {
   */
 
   new OpenSpending.Aggregator({
-    apiUrl: Setting.apiUrl + Setting.dataset[categoryType] + "/package",
+    apiUrl: Setting.apiUrl,
     dataset: Setting.dataset[categoryType],
     drilldowns: Setting.drilldowns[categoryType],
     cuts: ['year:' + fiscalYear],
